# django_site

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  backup.json  db.sqlite3  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
core/: settings.py  settings_prod.py  urls.py
nginx/: nginx.conf
portfolio/: admin.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py  0002_project_slug.py  0003_project_cover_project_tech_stack_and_more.py  0004_alter_project_slug.py  0005_tag_project_tags.py  0006_project_demo_url_project_repo_url.py  0007_project_owner.py  0008_contactmessage.py
portfolio/templatetags/: markup.py
portfolio/tests/: conftest.py  factories.py  test_contact.py  test_models.py  test_permissions.py  test_views.py
templates/: 404.html  500.html  base.html  contact.html  index.html  profile.html  project_detail.html  projects_add.html  projects_delete.html  projects_edit.html  projects_list.html
templates/registration/: login.html  register.html
