[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["test_*.py", "*_tests.py"]
addopts = "-q"
filterwarnings = [
  "ignore:.*RemovedInDjango60Warning.*"
]

[project]
name = "portfolio"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.0",
    "psycopg2-binary",   # PostgreSQL драйвер
    "markdown",
    "bleach",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "factory_boy",
    "black",
    "isort",
    "flake8",
    "pre-commit",
]
